Feature/travis codecov (#1)
* making sure fixyou build and lib is running fine on jdk8

* adding info logging to tthe build

* damn, it turns out integration tests are a bit unstable on slower machines due to wrong polling conditions, correcting them

* damn, it turns out integration tests are a bit unstable on slower machines due to wrong polling conditions, correcting them - thanks travis-ci for pointing that out
minor readme corrections done while waiting for build to complete ;)

* forgot about unit test correction

* correcting wrong polling conditions
readme improvements

* adding debug info, trying to figure out why jacocoTestReport does not include integration tests .exec file on travis
minor readme improvements

* adding debug info, trying to figure out why jacocoTestReport does not include integration tests .exec file on travis
minor readme improvements

* trying to make integration tests stable on travis

* trying to make integration tests stable on travis

* adding debug info, trying to figure out why jacocoTestReport does not include integration tests .exec file on travis

* trying to make integration tests stable on travis

* trying to figure out why jacocoTestReport does not include integration tests .exec file on travis

* trying to make integration tests stable on travis

* trying to make integration tests stable on travis

* trying to make integration tests stable on travis

Co-authored-by: Zlooo <zlooo27@wp.pl>